--- a/app/src/main/res/layout/activity_user_info_edit.xml
+++ b/app/src/main/res/layout/activity_user_info_edit.xml
@@ -73,7 +73,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/phone"
+                    android:text="@string/age"
                     android:textSize="15dp"/>
                 <EditText
                     android:layout_width="match_parent"
